--- a/create_page.css
+++ b/create_page.css
@@ -1,4 +1,4 @@
-    body {
+body {
         font-family: Arial, sans-serif;
         background-color: #f5f5f5;
         margin: 0;
@@ -20,14 +20,14 @@
         background-color: #fff;
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: left;
+        text-align: center; /* Center the form content */
     }
 
     label {
         display: block;
         font-weight: bold;
         margin: 10px 0;
-        text-align: center;
+        text-align: center; /* Center the labels */
     }
 
     input[type="text"],
@@ -36,17 +36,18 @@
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
-        margin: 5px 0;
+        display: block; /* Display them as block elements */
+        margin: 0 auto; /* Center the input elements horizontally */
     }
 
     input[type="submit"] {
-        display: inline-block;
+        display: block; /* Display the submit button as a block element for center alignment */
+        margin: 10px auto; /* Center the submit button horizontally */
         padding: 10px 20px;
         background-color: #67b3b5;
         color: #fff;
         text-decoration: none;
         border-radius: 5px;
-        margin: 10px;
         font-weight: bold;
     }
 
