--- a/games_list.css
+++ b/games_list.css
@@ -12,8 +12,6 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 20px;
-    flex-direction: row; /* Display horizontally */
     align-items: center;
 }
 
@@ -54,7 +52,7 @@ main {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center; /* Center the content */
+    text-align: center;
 }
 
 img {
