--- a/games_list.css
+++ b/games_list.css
@@ -59,3 +59,46 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+/* Search Bar Styling */
+.search-container {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 400px;
+}
+
+.search-container form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.search-container label {
+    display: none;
+}
+
+.search-container input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.search-container button {
+    padding: 10px 20px;
+    background-color: #67b3b5;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    margin: 5px;
+}
+
+.search-container button:hover {
+    background-color: #4a8a8c;
+}
