--- a/create_page.css
+++ b/create_page.css
@@ -55,29 +55,19 @@ body {
         background-color: #4a8a8c;
     }
 
-    .file-upload {
-        text-align: center;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        padding: 10px;
-        margin: 0 auto;
-        width: 80%;
-    }
-    
-    .file-upload input[type="file"] {
+    .custom-file-input {
         display: none;
     }
     
-    .file-upload .file-upload-text {
-        padding: 10px 20px;
+    .custom-file-label {
         background-color: #67b3b5;
         color: #fff;
-        text-decoration: none;
+        padding: 10px 20px;
         border-radius: 5px;
-        font-weight: bold;
+        display: inline-block;
         cursor: pointer;
     }
     
-    .file-upload .file-upload-text:hover {
+    .custom-file-label:hover {
         background-color: #4a8a8c;
     }
