--- a/login.css
+++ b/login.css
@@ -16,7 +16,16 @@ header {
 
 .subheader {
     background-color: #fff;
-    padding: 10px 0;
+    padding: 2px 0;
     text-align: center;
-    font-size: 20px;
+}
+
+form {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
