--- a/home_page.css
+++ b/home_page.css
@@ -17,6 +17,12 @@ header h1 {
    margin: 0;
 }
 
+.subheader {
+   background-color: #fff;
+   padding: 1px 0;
+   text-align: center;
+}
+
 main {
    max-width: 1000px;
    margin: 0 auto;
