--- a/login.css
+++ b/login.css
@@ -32,3 +32,18 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #67b3b5;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 10px;
+    font-weight: bold;
+ }
+ 
+ .button:hover {
+    background-color: #4a8a8c;
+ }
