--- a/create_page.css
+++ b/create_page.css
@@ -1,4 +1,4 @@
-body {
+    body {
         font-family: Arial, sans-serif;
         background-color: #f5f5f5;
         margin: 0;
@@ -11,6 +11,12 @@ body {
         color: #fff;
         padding: 20px 0;
         margin: 0;
+    }
+
+    .subheader {
+        background-color: #fff;
+        padding: 1px 0;
+        text-align: center;
     }
 
     form {
