--- a/create_page.css
+++ b/create_page.css
@@ -13,6 +13,12 @@
         margin: 0;
     }
 
+    header h1 {
+        color: #fff;
+        font-size: 36px;
+        margin: 0;
+     }
+    
     .subheader {
         background-color: #fff;
         padding: 1px 0;
