--- a/verification.css
+++ b/verification.css
@@ -29,6 +29,16 @@ header h1 {
     
  }
 
+ .subheader {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
 form {
     max-width: 800px;
     margin: 0 auto;
