--- a/verification.css
+++ b/verification.css
@@ -11,7 +11,8 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -32,9 +33,10 @@ header h1 {
  .subheader {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1px 0;
     background-color: #fff;
-    border-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
