--- a/verification.css
+++ b/verification.css
@@ -31,7 +31,7 @@ header h1 {
  }
 
  .subheader {
-    max-width: 800px;
+    width: 800px;
     margin: 0 auto;
     padding: 1px 0;
     background-color: #fff;
