--- a/verification.css
+++ b/verification.css
@@ -33,7 +33,7 @@ header h1 {
  .subheader {
     width: 800px;
     margin: 0 auto;
-    padding: 1px 0;
+    height: 10px;
     background-color: #fff;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
