--- a/verification.css
+++ b/verification.css
@@ -11,8 +11,8 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -31,12 +31,12 @@ header h1 {
  }
 
  .subheader {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
-    height: 10px;
+    padding: 1px 0;
     background-color: #fff;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
