--- a/verification.css
+++ b/verification.css
@@ -32,7 +32,7 @@ header h1 {
  .subheader {
     max-width: 800px;
     margin: 0 auto;
-    padding: 1px 0;
+    padding: 1px;
     background-color: #fff;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
