--- a/verification.css
+++ b/verification.css
@@ -11,8 +11,7 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -35,8 +34,7 @@ header h1 {
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
