--- a/verification.css
+++ b/verification.css
@@ -30,8 +30,9 @@ header h1 {
  }
 
  .subheader {
-    width: 838px;
+    max-width: 838px;
     margin: 0 auto;
+    padding: 1px 0;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
