--- a/verification.css
+++ b/verification.css
@@ -30,7 +30,9 @@ header h1 {
  }
 
  .subheader {
-    padding: 1px 0;
+    max-width: 800px;
+    margin: 10;
+    padding: 1px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
