--- a/verification.css
+++ b/verification.css
@@ -11,32 +11,37 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
- }
- 
+    border-top-left-radius: 50% 100px;
+    border-top-right-radius: 50% 100px;
+    overflow: hidden;
+    position: relative;
+}
+
 header h1 {
     color: #fff;
     font-size: 36px;
     margin: 0;
- }
+}
 
- h4 {
+h4 {
     color: #000000;
     font-size: 16px;
     margin: 0;
-    
- }
+}
 
- .subheader {
+.subheader {
     max-width: 800px;
-    margin: 10;
-    padding: 1px;
+    margin: 10px auto;
+    padding: 5px;
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    border-bottom-left-radius: 50% 50px;
+    border-bottom-right-radius: 50% 50px;
+    overflow: hidden;
+    position: relative;
+}
+
+.subheader h4 {
+    font-size: 14px;
 }
 
 form {
