--- a/verification.css
+++ b/verification.css
@@ -11,25 +11,25 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-top-left-radius: 50% 100px;
-    border-top-right-radius: 50% 100px;
-    overflow: hidden;
-    position: relative;
-}
-
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+ }
+ 
 header h1 {
     color: #fff;
     font-size: 36px;
     margin: 0;
-}
+ }
 
-h4 {
+ h4 {
     color: #000000;
     font-size: 16px;
     margin: 0;
-}
+    
+ }
 
-div {
+ .subheader {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -37,10 +37,6 @@ div {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-}
-
-.subheader h4 {
-    font-size: 14px;
 }
 
 form {
