--- a/verification.css
+++ b/verification.css
@@ -30,13 +30,8 @@ header h1 {
  }
 
  .subheader {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 1px;
+    padding: 1px 0;
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
 }
 
 form {
