--- a/verification.css
+++ b/verification.css
@@ -30,8 +30,11 @@ header h1 {
  }
 
  .subheader {
+    max-width: 800px;
+    margin: 0 auto;
     padding: 1px;
     background-color: #fff;
+    border-radius: 5px;
 }
 
 form {
