--- a/verification.css
+++ b/verification.css
@@ -31,9 +31,13 @@ header h1 {
 
  .subheader {
     max-width: 800px;
-    padding: 1px;
+    max-height: 30px;
+    margin: 0 auto;
+    padding: 20px;
     background-color: #fff;
     border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 form {
