--- a/verification.css
+++ b/verification.css
@@ -6,43 +6,45 @@ body {
     text-align: center;
 }
 
-header {
+.header-oval {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
- }
- 
-header h1 {
-    color: #fff;
-    font-size: 36px;
-    margin: 0;
- }
-
- h4 {
-    color: #000000;
-    font-size: 16px;
-    margin: 0;
-    
- }
-
- .subheader {
-    max-width: 800px;
-    max-height: 30px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
+    border-top-left-radius: 50% 200px;
+    border-top-right-radius: 50% 200px;
+    overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
-form {
+.header-oval h1 {
+    color: #fff;
+    font-size: 36px;
+    margin: 0;
+}
+
+.subheader {
     max-width: 800px;
     margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-bottom-left-radius: 50% 50px;
+    border-bottom-right-radius: 50% 50px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.subheader h4 {
+    color: #000000;
+    font-size: 16px;
+    margin: 0;
+}
+
+form {
+    max-width: 800px;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
