--- a/verification.css
+++ b/verification.css
@@ -11,7 +11,17 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+ }
+ 
+ .title {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #67b3b5;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -31,11 +41,11 @@ header h1 {
 
  .subheader {
     max-width: 800px;
-    max-height: 10px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    border-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
