--- a/verification.css
+++ b/verification.css
@@ -42,7 +42,7 @@ header h1 {
  .subheader {
     max-width: 800px;
     margin: 0 auto;
-    padding: 0;
+    padding: 1px;
     background-color: #fff;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
