--- a/verification.css
+++ b/verification.css
@@ -5,12 +5,14 @@ body {
     padding: 0;
     text-align: center;
 }
- 
- .title {
+
+header {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -31,8 +33,10 @@ header h1 {
  .subheader {
     max-width: 800px;
     margin: 0 auto;
-    padding: 5px;
+    padding: 20px;
     background-color: #fff;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
@@ -42,7 +46,7 @@ form {
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    border-radius: 1px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
