--- a/verification.css
+++ b/verification.css
@@ -5,14 +5,12 @@ body {
     padding: 0;
     text-align: center;
 }
-
-header {
+ 
+ .title {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
  }
@@ -31,13 +29,8 @@ header h1 {
  }
 
  .subheader {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
     background-color: #fff;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 1px 0;
     text-align: center;
 }
 
@@ -46,7 +39,7 @@ form {
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 1px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
