--- a/verification.css
+++ b/verification.css
@@ -6,6 +6,7 @@ body {
     text-align: center;
 }
 
+
 header {
     max-width: 800px;
     margin: 0 auto;
@@ -38,10 +39,13 @@ header h1 {
  }
 
  .subheader {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 5px;
     background-color: #fff;
-    padding: 1px 0;
+    border-radius: 1px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: -15px;
 }
 
 form {
