--- a/verification.css
+++ b/verification.css
@@ -29,12 +29,12 @@ h4 {
 
 }
 
-div {
+.subheader {
     max-width: 800px;
     margin: 0 auto;
-    padding: 5px;
+    padding: 20px;
     background-color: #fff;
-    border-radius: 1px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
