--- a/verification.css
+++ b/verification.css
@@ -11,6 +11,7 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
+    border-radius: 0;
     border-bottom-left-radius: 5px;
     border-bottom-left-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -34,6 +35,7 @@ div {
     margin: 0 auto;
     padding: 5px;
     background-color: #fff;
+    border-radius: 0;
     border-top-left-radius: 5px;
     border-top-left-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
