--- a/verification.css
+++ b/verification.css
@@ -11,7 +11,7 @@ header {
     margin: 0 auto;
     padding: 20px;
     background-color: #67b3b5;
-    border-radius: 0;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
@@ -31,9 +31,9 @@ h4 {
 div {
     max-width: 800px;
     margin: 0 auto;
-    padding: 5px;
+    padding: 20px;
     background-color: #fff;
-    border-radius: 0;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
