--- a/web/css/home.css
+++ b/web/css/home.css
@@ -193,5 +193,8 @@
 .blog-style-one .blog-content .more:hover {
   color: var(--primary-dark);
 }
-
+.blog-image img {
+  width: 100%;
+  height: auto;
+}
 /*# sourceMappingURL=blog-01.css.map */
